Fixed QBitmap::load to load into bitmap format again.

Task: http://bugreports.qt.nokia.com/browse/QTBUG-7468
Reviewed-by: Trond